update docker compose file

--- a/dataset/setupDatabase.ipynb
+++ b/dataset/setupDatabase.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"uiuc_subreddit_posts.csv\")\n",
+    "df = pd.read_csv(\"uiuc_subreddit_posts_2.csv\")\n",
     "df.fillna(\"\", inplace=True)\n",
     "\n",
     "# Convert stringified JSON back to list of dicts for the 'comments' column\n",
@@ -33,21 +33,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "load_dotenv()\n",
-    "mongo_uri = os.getenv(\"mongo_uri\")\n",
+    "mongo_uri = os.getenv(\"MONGO_URI\")\n",
     "client = MongoClient(mongo_uri)\n",
     "db = client[\"project-cluster\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserted 100 documents into MongoDB.\n"
+     ]
+    }
+   ],
    "source": [
     "collection = db[\"reddit-posts\"] # Collection name\n",
     "\n",
